# discord-music-bot

./: Cargo.toml
src/: main.rs
src/commands/: clear.rs  disconnect.rs  mod.rs  ping.rs  play.rs  playing.rs  queue.rs  shuffle.rs  skip.rs
src/common/: join_call.rs  mod.rs
