[package]
name = "irysbot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = "0.1"
tracing-subscriber = "0.2"
tracing-futures = "0.2"
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread", "signal"] }
songbird = { version = "0.3.0", features = ["builtin-queue"] }
invidious = "0.4.1"
regex = "1"
url = "2.3.1"
yaml-rust = "0.4.5"
rand = "0.8.5"

[dependencies.serenity]
default-features = false
features = [
    "builder",
    "cache",
    "chrono",
    "client",
    "framework",
    "gateway",
    "http",
    "model",
    "standard_framework",
    "utils",
    "voice",
    "rustls_backend",
]

version = "0.11"